-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The quota usage is refreshed in qsd_op_end, which is called when the transaction is stopped.
If some large file is deleted, the blocks occupied by this file could have not been deleted when
the transaction is stopped, then the quota won't be released in time and can cause other write
to fail with -EDQUOT.