lustre/include/obd_support.h
@@ -554,6 +554,7 @@ extern bool obd_enable_fname_encoding;
 #define OBD_FAIL_QUOTA_RECALC            0xA07
 #define OBD_FAIL_QUOTA_GRANT             0xA08
 #define OBD_FAIL_QUOTA_NOSYNC            0xA09
+#define OBD_FAIL_QUOTA_USAGE_NOWAIT      0xA10
 
 #define OBD_FAIL_LPROC_REMOVE            0xB00
 
