lustre/osd-ldiskfs/osd_io.c
@@ -2358,6 +2358,8 @@ static int osd_declare_punch(const struct lu_env *env, struct dt_object *dt,
 	struct osd_thandle *oh;
 	struct osd_object  *obj = osd_dt_obj(dt);
 	struct inode	   *inode;
+	long long	    space = 0;
+	loff_t		    size;
 	int		    rc;
 	ENTRY;
 
@@ -2378,8 +2380,12 @@ static int osd_declare_punch(const struct lu_env *env, struct dt_object *dt,
 	inode = obj->oo_inode;
 	LASSERT(inode);
 
+	size = i_size_read(inode);
+	if (size > start)
+		space = -toqb((size > end ? end : size - start));
+
 	rc = osd_declare_inode_qid(env, i_uid_read(inode), i_gid_read(inode),
-				   i_projid_read(inode), 0, oh, obj,
+				   i_projid_read(inode), space, oh, obj,
 				   NULL, OSD_QID_BLK);
 
 	/* if object holds encrypted content, we need to make sure we truncate
